# Test-CMake

./: .gitignore  CMakeLists.txt
src/: Base.cpp  Base.hpp  Base.hpp.in  main.cpp
